--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   
 
   <!-- ハンバーガースクリプト -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
   <script src="js/script.js"></script>
 
 </body>
