--- a/downlode.html
+++ b/downlode.html
@@ -56,7 +56,7 @@
   </footer>
 
 <!-- ハンバーガースクリプト -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
