--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
           <li><a href="index.html">ホーム</a></li>
           <li><a href="menu.html">かるた一覧</a></li>
-          <li><a href="downlode.html">ダウンロード</a></li>
+          <li><a href="download.html">ダウンロード</a></li>
           <li><a href="contact.html">お問い合わせ</a></li>
           <li class="language"><a href="https://translate.google.co.jp/translate?hl=ja&sl=ja&tl=pt&u=https%3A%2F%2Fs1712008.github.io%2Fechizenkaruta%2F">Português</a></li>
         </ul>
