ファイル分け

--- a/menu.html
+++ b/menu.html
@@ -43,35 +43,35 @@
 
    <div class="items">
      <div class="item">
-       <a href="pages/page A.html">
+       <a href="page A.html">
          <p><img src="images/あ　しらやま西瓜.png" alt=""></p>
          <div class="item-title"><i class="fa fa-caret-right"></i> しらやま西瓜</div>
        </a>
      </div>
 
      <div class="item">
-       <a href="pages/page I.html">
+       <a href="page I.html">
          <p><img src="images/い　ブラジル.png" alt=""></p>
          <div class="item-title"><i class="fa fa-caret-right"></i> ブラジル人</div>
        </a>
      </div>
 
      <div class="item">
-       <a href="pages/page U.html">
+       <a href="page U.html">
          <p><img src="images/う　打ち刃物.png" alt=""></p>
          <div class="item-title"><i class="fa fa-caret-right"></i> 越前打刃物</div>
        </a>
      </div>
 
      <div class="item">
-       <a href="pages/page E.html">
+       <a href="page E.html">
          <p><img src="images/え　越前和紙.png" alt=""></p>
          <div class="item-title"><i class="fa fa-caret-right"></i> 越前和紙</div>
        </a>
      </div>
 
      <div class="item">
-       <a href="pages/page O.html">
+       <a href="page O.html">
          <p><img src="images/お　コウノトリ.png" alt=""></p>
          <div class="item-title"><i class="fa fa-caret-right"></i> コウノトリ</div>
        </a>
