--- a/page A.html
+++ b/page A.html
@@ -27,7 +27,7 @@
         <ul>
           <li><a href="index.html">ホーム</a></li>
           <li><a href="menu.html">かるた一覧</a></li>
-          <li><a href="downlode.html">ダウンロード</a></li>
+          <li><a href="download.html">ダウンロード</a></li>
           <li><a href="contact.html">お問い合わせ</a></li>
           <li class="language"><a href="https://translate.google.com/translate?hl=ja&sl=ja&tl=pt&u=https%3A%2F%2Fmt77j.github.io%2Fkaruta%2F">Português</a></li>
         </ul>
@@ -77,7 +77,7 @@
 
 
  <!-- ハンバーガースクリプト -->
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
  <script src="js/script.js"></script>
 
 </body>
