--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
 
    <div class="items">
      <div class="item">
-       <a href="page A.html">
+       <a href="page_a.html">
          <p><img src="images/あ　しらやま西瓜.png" alt=""></p>
          <div class="item-title"><i class="fa fa-caret-right"></i> しらやま西瓜</div>
        </a>
