--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li><a href="menu.html">かるた一覧</a></li>
           <li><a href="download.html">ダウンロード</a></li>
           <li><a href="contact.html">お問い合わせ</a></li>
-          <li class="language"><a href="https://translate.google.co.jp/translate?hl=ja&sl=ja&tl=pt&u=https%3A%2F%2Fs1712008.github.io%2Fechizenkaruta%2F">Português</a></li>
+          <li class="language"><a href="https://translate.google.co.jp/translate?hl=ja&sl=ja&tl=pt&u=https%3A%2F%2Fjin-link8.github.io%2Fechizenkaruta%2F">Português</a></li>
         </ul>
       </nav>
     </div>
@@ -73,7 +73,7 @@
 
     <div class="content-footer">
       <div class="sns">
-        <a href="http://twitter.com/share?url=http://127.0.0.1:49557/page1.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
     </div>
   </main>
