翻訳リンク

--- a/page_ne.html
+++ b/page_ne.html
@@ -29,7 +29,7 @@
           <li><a href="menu.html">かるた一覧</a></li>
           <li><a href="downlode.html">ダウンロード</a></li>
           <li><a href="contact.html">お問い合わせ</a></li>
-          <li class="language"><a href="https://translate.google.com/translate?hl=ja&sl=ja&tl=pt&u=https%3A%2F%2Fmt77j.github.io%2Fkaruta%2F">Português</a></li>
+          <li class="language"><a href="https://translate.google.co.jp/translate?hl=ja&sl=ja&tl=pt&u=https%3A%2F%2Fjin-link8.github.io%2Fechizenkaruta%2Fpage_ne.html">Português</a></li>
         </ul>
       </nav>
     </div>
