--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div class="content-footer">
       <div class="sns">
-        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/index.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
     </div>
   </main>
