--- a/menu.html
+++ b/menu.html
@@ -362,7 +362,7 @@
 
     <div class="content-footer">
       <div class="sns">
-        <a href="http://twitter.com/share?url=http://127.0.0.1:49557/page1.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/menu.html&text=越前かるたの一覧&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
       <div class="button"><a href="index.html">ホームに戻る</a></div>
     </div>
