--- a/page_mu.html
+++ b/page_mu.html
@@ -63,7 +63,7 @@
 
     <div class="content-footer">
      <div class="sns">
-       <a href="http://twitter.com/share?url=http://127.0.0.1:49557/page1.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
+       <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/page_mu.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
      </div>
      <div class="button"><a href="menu.html">かるた一覧に戻る</a></div>
    </div>
