--- a/page_e.html
+++ b/page_e.html
@@ -54,7 +54,7 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>え　：　越前和紙　紙の王に　ふさわしい紙</h2>
      </div>
 
     </div>
