--- a/page_i.html
+++ b/page_i.html
@@ -54,7 +54,7 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>い　：　一緒に素敵な街にしよう　ブラジルの方よろしくね</h2>
      </div>
 
     </div>
