--- a/page_ka.html
+++ b/page_ka.html
@@ -54,7 +54,7 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>か　：　かこさとしふるさと絵本館　楽しいキャラがいっぱいだ</h2>
      </div>
 
     </div>
