--- a/page_ke.html
+++ b/page_ke.html
@@ -54,7 +54,8 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>け　：　景色を楽しむ　大正の奥座敷　愛山荘
+       </h2>
      </div>
 
     </div>
