--- a/page_ki.html
+++ b/page_ki.html
@@ -54,7 +54,7 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>き　：　菊人形　彩り豊かな　秋祭り</h2>
      </div>
 
     </div>
