--- a/page_ko.html
+++ b/page_ko.html
@@ -54,7 +54,7 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>こ　：　苔の海　ヒイラギの巨木　城福寺</h2>
      </div>
 
     </div>
