--- a/page_ku.html
+++ b/page_ku.html
@@ -54,7 +54,7 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>く　：　蔵の辻に集まれ！　食べて遊んで　結の祭り</h2>
      </div>
 
     </div>
