--- a/page_u.html
+++ b/page_u.html
@@ -54,7 +54,7 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>う　：　打刃物　磨き抜かれた　伝統と技</h2>
      </div>
 
     </div>
