--- a/page_o.html
+++ b/page_o.html
@@ -54,7 +54,7 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　甘くて　大きい　しらやま西瓜</h2>
+       <h2>お　：　大きくなぁれ　武生の大鳥　コウノトリ</h2>
      </div>
 
     </div>
