--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
           <li><a href="index.html">ホーム</a></li>
           <li><a href="menu.html">かるた一覧</a></li>
           <li><a href="download.html">ダウンロード</a></li>
-          <li><a href="contact.html">お問い合わせ</a></li>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfS9aK-Qn4j-zZWCS9FQJYiMiut88yBqCb23_zdubvp9rDr4A/viewform?usp=sf_link">お問い合わせ</a></li>
           <li class="language"><a href="https://translate.google.com/translate?hl=ja&sl=ja&tl=pt&u=https%3A%2F%2Fmt77j.github.io%2Fkaruta%2F">Português</a></li>
         </ul>
       </nav>
@@ -42,7 +42,7 @@
     </div>
   </main>
 
-  <p>ただ今準備中です</p>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfS9aK-Qn4j-zZWCS9FQJYiMiut88yBqCb23_zdubvp9rDr4A/viewform?embedded=true" width="640" height="841" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 
   <hr>
 
