--- a/page_to.html
+++ b/page_to.html
@@ -28,7 +28,7 @@
           <li><a href="index.html">ホーム</a></li>
           <li><a href="menu.html">かるた一覧</a></li>
           <li><a href="downlode.html">ダウンロード</a></li>
-          <li><a href="contact.html">お問い合わせ</a></li>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfS9aK-Qn4j-zZWCS9FQJYiMiut88yBqCb23_zdubvp9rDr4A/viewform?usp=sf_link">お問い合わせ</a></li>
           <li class="language"><a href="https://translate.google.co.jp/translate?hl=ja&sl=ja&tl=pt&u=https%3A%2F%2Fjin-link8.github.io%2Fechizenkaruta%2Fpage_to.html">Português</a></li>
         </ul>
       </nav>
