--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
      </div>
 
      <div class="content-body">
-       <p>ブランド「SOU・SOU」の店が多く立ち並ぶ通りの、真ん中に立っている看板である。このあたりは建物が密集しているが、一目でどの店がどの方向にあるのかが分かる。具体的な距離や地図は書いていないが、方向さえ分かれば、その方向に歩いていけばたどり着けるので、必要なことだけを示したシンプルなデザインで良いと考える。様々な方向に向いている看板が木のようにも見えることから、デザイン性も高いのではないだろうか。下のほうにチラシが配置されているのも良い点である。</p>
+       <h1>～地域を、人を、魅力を“ぎゅっ”と～</h1>
+       <p>人、食、観光、伝統工芸品。
+         <br>
+        越前市には歴史ある素晴らしいものがたくさんあります。
+        <br>
+        知ってもらえば好きになる。
+        <br>
+        そんな越前市を1つのかるたにまとめました。
+        </p>
 
        <div class="button">
          <a href="menu.html" class="btn-flat-double-border">かるた一覧はこちら</a>
