--- a/page_ke.html
+++ b/page_ke.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>しらやま西瓜</title>
+  <title>愛山荘</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
@@ -57,6 +57,8 @@
        <h2>け　：　景色を楽しむ　大正の奥座敷　愛山荘
        </h2>
      </div>
+
+     <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.1368736215154!2d136.16546549953821!3d35.89466328657902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x720f457fefb9fb1d!2z5oSb5bGx6I2Y!5e0!3m2!1sja!2sjp!4v1599630754614!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
 
     </div>
 
