--- a/page_ke.html
+++ b/page_ke.html
@@ -58,7 +58,12 @@
        </h2>
      </div>
 
-     <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.1368736215154!2d136.16546549953821!3d35.89466328657902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x720f457fefb9fb1d!2z5oSb5bGx6I2Y!5e0!3m2!1sja!2sjp!4v1599630754614!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+    </div>
+
+    <div class="access">
+      <h1>アクセス</h1>
+
+      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.1368736215154!2d136.16546549953821!3d35.89466328657902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x720f457fefb9fb1d!2z5oSb5bGx6I2Y!5e0!3m2!1sja!2sjp!4v1599630754614!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
 
     </div>
 
