--- a/page_he.html
+++ b/page_he.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7799.075669311827!2d136.1565991991831!3d35.89567945242008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c79032614a7bc09!2z57Sr5byP6YOo5YWs5ZyS!5e0!3m2!1sja!2sjp!4v1599641102880!5m2!1sja!2sjp"width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
