--- a/page_ro.html
+++ b/page_ro.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6463.897174820544!2d136.16810189500163!3d35.89927482976355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8ac391a856aab%3A0xb37fd401f2c80d4b!2z5b6h5riF5rC05LiN5YuV5bCK!5e0!3m2!1sja!2sjp!4v1599643190679!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
