--- a/page_ru.html
+++ b/page_ru.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9545.178839853197!2d136.23929931591502!3d35.90651384359059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8a9258b7f4393%3A0x805ef6a72f788c00!2z5aSn54Cn56We56S-44O75bKh5aSqKOOBiuOBi-OCguOBqCnnpZ7npL4!5e0!3m2!1sja!2sjp!4v1599643054045!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
