--- a/page_hi.html
+++ b/page_hi.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10486.484263676577!2d136.23047084949445!3d35.891691134722066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3d5c59d469d186a2!2z6LaK5YmN5biC5ZGz55yf6YeO5bCP5a2m5qCh!5e0!3m2!1sja!2sjp!4v1599640628512!5m2!1sja!2sjp"width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
