--- a/page_ho.html
+++ b/page_ho.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23713.02374953875!2d136.25054260940965!3d35.88810509753079!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x947157339daf6f76!2z55m95bGx56We56S-!5e0!3m2!1sja!2sjp!4v1599640284133!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
