--- a/page_ka.html
+++ b/page_ka.html
@@ -59,6 +59,13 @@
 
     </div>
 
+    <div class="access">
+      <h1>アクセス</h1>
+
+      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9897.486930634692!2d136.1661841713552!3d35.89517474494459!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x41daa9e570afb32c!2z44GL44GT44GV44Go44GXIOOBteOCi-OBleOBqOe1teacrOmkqA!5e0!3m2!1sja!2sjp!4v1599635057662!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+    </div>
+
     <hr>
 
     <div class="content-footer">
