--- a/page_ki.html
+++ b/page_ki.html
@@ -59,6 +59,13 @@
 
     </div>
 
+    <div class="access">
+      <h1>アクセス</h1>
+
+      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d856.0433653943531!2d136.15719688622232!3d35.898271595147264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8ac4f45215861%3A0x22e66c2b627506af!2z5q2m55Sf5Lit5aSu5YWs5ZyS!5e0!3m2!1sja!2sjp!4v1599635551305!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+    </div>
+
     <hr>
 
     <div class="content-footer">
