--- a/page_ko.html
+++ b/page_ko.html
@@ -59,6 +59,13 @@
 
     </div>
 
+    <div class="access">
+      <h1>アクセス</h1>
+
+      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.2403366905974!2d136.2307754829663!3d35.892129030252164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8a95b93ea3507%3A0xd24ad5f46b0c58da!2z5Z-O56aP5a-6!5e0!3m2!1sja!2sjp!4v1599636734207!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+    </div>
+
     <hr>
 
     <div class="content-footer">
