--- a/page_ku.html
+++ b/page_ku.html
@@ -59,6 +59,13 @@
 
     </div>
 
+    <div class="access">
+      <h1>アクセス</h1>
+
+      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2963.6316093253604!2d136.16404855542535!3d35.901363040918554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8ac39ffeef479%3A0x4f07272e174a91f8!2z6JS144Gu6L67!5e0!3m2!1sja!2sjp!4v1599636213505!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+    </div>
+
     <hr>
 
     <div class="content-footer">
