--- a/page_mu.html
+++ b/page_mu.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11518.311147829068!2d136.23115402557545!3d35.892704933544564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8a963b093ffff%3A0x370da8a7c0fc3632!2z6YeN6KaB5paH5YyW6LKh5pen6LC35Y-j5a625L2P5a6F!5e0!3m2!1sja!2sjp!4v1599641466570!5m2!1sja!2sjp"width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
