--- a/page_ne.html
+++ b/page_ne.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4671.384771546121!2d136.20416050703824!3d35.888519025875496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8abf0395237b1%3A0x724cd88bfe168d65!2z5b6h6KqV55Sf5a-6!5e0!3m2!1sja!2sjp!4v1599639949219!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
