--- a/page_nu.html
+++ b/page_nu.html
@@ -57,14 +57,19 @@
        <h2>ぬ　：　ぬくもりのイラスト　いわさきちひろの生まれた家</h2>
      </div>
 
-    </div>
+     </div><div class="access">
+       <h1>アクセス</h1>
 
-    <hr>
+       <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8144.173145465252!2d136.16175023630055!3d35.897598528665156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd31c7fd3bbbb1f46!2z44Gh44Gy44KN44Gu55Sf44G-44KM44Gf5a62IOiomOW_temkqA!5e0!3m2!1sja!2sjp!4v1599639564618!5m2!1sja!2sjp"  width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
 
-    <div class="content-footer">
-     <div class="sns">
-       <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/page_nu.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
      </div>
+
+     <hr>
+
+     <div class="content-footer">
+      <div class="sns">
+        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/page_nu.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
+      </div>
      <div class="button"><a href="menu.html">かるた一覧に戻る</a></div>
    </div>
  </main>
