--- a/page_re.html
+++ b/page_re.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5242.739868591172!2d136.16810189500163!3d35.89927482976355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfa208b095948b7cc!2z5q2m55Sf5YWs5Lya5aCC6KiY5b-16aSo!5e0!3m2!1sja!2sjp!4v1599643131551!5m2!1sja!2sjp"  width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
