--- a/page_ri.html
+++ b/page_ri.html
@@ -59,6 +59,14 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3231.145494728815!2d136.23633561522254!3d35.91893858013954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8af2761f0e425%3A0x79e279b9fd89c9c0!2z6Iqx562Q5YWs5ZyS!5e0!3m2!1sja!2sjp!4v1599642428723!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
+
     <hr>
 
     <div class="content-footer">
