--- a/page_ya.html
+++ b/page_ya.html
@@ -59,6 +59,13 @@
 
     </div>
 
+  </div><div class="access">
+    <h1>アクセス</h1>
+
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13901.363497423377!2d136.13411881871!3d35.867239388308434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8ab57f4c88147%3A0x2f0b3b6dbd08ca4a!2z44GX44GN44G25rip5rOJ5rmv5qW96YeM!5e0!3m2!1sja!2sjp!4v1599642008457!5m2!1sja!2sjp"width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+  </div>
+
     <hr>
 
     <div class="content-footer">
