--- a/page_su.html
+++ b/page_su.html
@@ -62,7 +62,7 @@
     <div class="access">
       <h1>アクセス</h1>
 
-      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4014.1766036281015!2d136.21050542644747!3d35.888308390817635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8abfbf84ceab5%3A0x2718368b7fd481ee!2z56aP5LqV5LuB5oSb5a2m5ZySIOS7geaEm-Wkp-Wtpg!5e0!3m2!1sja!2sjp!4v1599636857015!5m2!1sja!2sjp" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+      <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d201.97735204007975!2d136.25048759490568!3d35.90688967310557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc003e41f2f886ed5!2z77yI5pyJ77yJ6LaK5YmN6KO957SZ5bel5aC0!5e0!3m2!1sja!2sjp!4v1599643790588!5m2!1sja!2sjp"width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
 
     </div>
 
