説明ページ

--- a/page_ki.html
+++ b/page_ki.html
@@ -57,7 +57,15 @@
        <h2>き　：　菊人形　彩り豊かな　秋祭り</h2>
      </div>
 
+     <hr>
+
+     <div class="page-setumei">
+       <p>武生菊人形は、毎年10月から11月にかけて武生中央公園で行われるイベント。菊の花や葉を人形の衣服にしたもの。武生菊人形は日本三大菊人形に数えられる。
+        </p>
+     </div>
+
     </div>
+
 
     <div class="access">
       <h1>アクセス</h1>
