--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="jquery.bxslider.min.js"></script>
+<link href="jquery.bxslider.css" rel="stylesheet" />
+<script type="text/javascript">
+jQuery(document).ready(function($){
+$('.bxslider').bxSlider({
+auto: true,
+});
+});
+</script>
+  
 </head>
 
 <body>
@@ -105,7 +116,16 @@
        <h3>・でっかいかるたで大合戦！！</h3>
        <p>2019年10月に、越前かるたを“でっかく”して野外で取り合うかるた大会を開催しました。
        </p>
-        
+       <ul class="bxslider">
+        <li><img src="images/１でっかいかるた.jpeg"></li>
+        <li><img src="images/２でっかいかるた.jpeg"></li>
+        <li><img src="images/３でっかいかるた.jpeg"></li>
+        <li><img src="images/４でっかいかるた.jpeg"></li>
+        <li><img src="images/５でっかいかるた.jpeg"></li>
+        <li><img src="images/６でっかいかるた.jpeg"></li>
+        <li><img src="images/７でっかいかるた.jpeg"></li>
+        </ul>
+
         <h3>・チャレンジ！！オープンガバナンス2019</h3>
         <p>地域の問題を解決するアイデアコンテスト、チャレンジオープンガバナンス(COG)に、仁愛大学吉村ゼミは「でっかいかるたで大合戦！！」で応募をしました。</p>
         
