これまでの活動画像追加

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="css/nav.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="jquery.bxslider.min.js"></script>
-<link href="jquery.bxslider.css" rel="stylesheet" />
+<script src="js/jquery.bxslider.min.js"></script>
+<link href="css/jquery.bxslider.css" rel="stylesheet" />
 <script type="text/javascript">
 jQuery(document).ready(function($){
 $('.bxslider').bxSlider({
@@ -113,22 +113,42 @@ auto: true,
      </div>
 
       <div class="content-body">
-       <h3>・でっかいかるたで大合戦！！</h3>
-       <p>2019年10月に、越前かるたを“でっかく”して野外で取り合うかるた大会を開催しました。
-       </p>
-       <ul class="bxslider">
-        <li><img src="images/１でっかいかるた.jpeg"></li>
-        <li><img src="images/２でっかいかるた.jpeg"></li>
-        <li><img src="images/３でっかいかるた.jpeg"></li>
-        <li><img src="images/４でっかいかるた.jpeg"></li>
-        <li><img src="images/５でっかいかるた.jpeg"></li>
-        <li><img src="images/６でっかいかるた.jpeg"></li>
-        <li><img src="images/７でっかいかるた.jpeg"></li>
-        </ul>
+        <div class="event">
+         <h3>・でっかいかるたで大合戦！！</h3>
+         <p>2019年10月に、越前かるたを“でっかく”して野外で取り合うかるた大会を開催しました。
+         </p>
+         <ul class="bxslider">
+         <li><img src="images/１でっかいかるた.jpeg"></li>
+         <li><img src="images/２でっかいかるた.jpeg"></li>
+         <li><img src="images/３でっかいかるた.jpeg"></li>
+         <li><img src="images/４でっかいかるた.jpeg"></li>
+         <li><img src="images/５でっかいかるた.jpeg"></li>
+         <li><img src="images/６でっかいかるた.jpeg"></li>
+         <li><img src="images/７でっかいかるた.jpeg"></li>
+         <li><img src="images/８でっかいかるた.jpeg"></li>
+         <li><img src="images/９でっかいかるた.JPG"></li>
+         <li><img src="images/１０でっかいかるた.jpeg"></li>
+         </ul>
+         <video src="video/でっかいかるた.mp4" controls></video>
+       </div>
 
-        <h3>・チャレンジ！！オープンガバナンス2019</h3>
-        <p>地域の問題を解決するアイデアコンテスト、チャレンジオープンガバナンス(COG)に、仁愛大学吉村ゼミは「でっかいかるたで大合戦！！」で応募をしました。</p>
-        
+       <div class="event">
+         <h3>・仁愛大学制作展2020</h3>
+         <p>2020年1月に、仁愛大学吉村ゼミの卒業研究の成果を発表する場として制作展を開催。3年生のゼミ活動「でっかいかるたで大合戦！！」もこの制作展で発表しました。</p>
+         <img src="images/制作展.jpg" ait="">
+         <ul class="bxslider">
+          <li><img src="images/制作展１.JPG"></li>
+          <li><img src="images/制作展２.JPG"></li>
+          <li><img src="images/制作展３.JPG"></li>
+          <li><img src="images/制作展４.JPG"></li>
+          </ul>
+       </div>
+
+       <div class="event">
+         <h3>・チャレンジ！！オープンガバナンス2019</h3>
+         <p>地域の問題を解決するアイデアコンテスト、チャレンジオープンガバナンス(COG)に、仁愛大学吉村ゼミは「でっかいかるたで大合戦！！」で応募をしました。</p>
+         <img src="images/報告会.jpg" art="">
+        </div>
       </div>
 
     </div>
