--- a/menu.html
+++ b/menu.html
@@ -358,6 +358,12 @@
 
     </div>
 
+    <div class="secret">
+     <div class="button">
+      <a href="secret.html" class="btn-flat-double-border">ひみつの暗号</a>
+     </div>
+   </div>
+
     <hr>
 
     <div class="content-footer">
