画像差し替え

--- a/download.html
+++ b/download.html
@@ -41,7 +41,8 @@
       <h1>ダウンロード</h1>
     </div>
 
-<p>ただ今準備中です</p>
+   <p>ただ今準備中です</p>
+   <a href="ダウンロードしたいファイルのurl" download>越前かるた</a>
 
   </main>
 
