--- a/download.html
+++ b/download.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ダウンロード</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
 </head>
@@ -41,15 +42,26 @@
       <h1>ダウンロード</h1>
     </div>
 
-   <p>ただ今準備中です</p>
-   <a href="ダウンロードしたいファイルのurl" download>越前かるた</a>
+    <div class="content-body">
+      <div class="downlode">
+        <div class="button">
+         <a href="越前かるた.pdf" download class="btn-square">越前かるたダウンロードはこちら</a>
+       </div>
+      </div>
+   </div>
+
+   <hr>
+
+   <div class="content-footer">
+     <div class="sns">
+       <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/download.html&text=越前かるたのWebサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
+     </div>
+   </div>
+
 
   </main>
 
-
-
-  <hr>
-
+  
   <footer>
     <p class="credit">
       &copy; 2020 jindai Yui Ootani
