ダウンロード画像追加

--- a/download.html
+++ b/download.html
@@ -45,7 +45,31 @@
     <div class="content-body">
       <div class="downlode">
         <div class="button">
-         <a href="越前かるた.pdf" download class="btn-square">越前かるたダウンロードはこちら</a>
+         <a href="越前かるた.pdf" download class="btn-square">越前かるたダウンロードはこちら（PDF)</a>
+       </div>
+      </div>
+
+      <div class="down-item">
+        <img src="downlode/表　あーけ.png">
+        <img src="downlode/表　こーつ.png">
+        <img src="downlode/表　てーひ.png">
+        <img src="downlode/表　ふーや.png">
+        <img src="downlode/表　ゆーん.png">
+        <img src="downlode/裏　あーけ.png">
+        <img src="downlode/裏　こーつ.png">
+        <img src="downlode/裏　てーひ.png">
+        <img src="downlode/裏　ふーや.png">
+        <img src="downlode/裏　ゆーん.png">
+        <img src="downlode/読み札　あーけ.png">
+        <img src="downlode/読み札　こーつ.png">
+        <img src="downlode/読み札　てーひ.png">
+        <img src="downlode/読み札　ふーや.png">
+        <img src="downlode/読み札　ゆーん.png">
+      </div>
+
+      <div class="downlode">
+        <div class="button">
+         <a href="越前かるた.pdf" download class="btn-square">越前かるたダウンロードはこちら（PDF)</a>
        </div>
       </div>
    </div>
