でっかいかるた説明

--- a/index.html
+++ b/index.html
@@ -114,9 +114,22 @@ auto: true,
 
       <div class="content-body">
         <div class="event">
-         <h3>・でっかいかるたで大合戦！！</h3>
-         <p>2019年10月に、越前かるたを“でっかく”して野外で取り合うかるた大会を開催しました。
-         </p>
+         <h3>でっかいかるたで大合戦！！</h3>
+         <p>2019年10月に、越前かるたを“でっかく”して野外で取り合うかるた大会を開催しました！　<a href="https://mt77j.github.io/karuta/index.html">大会のホームページはこちら</a></p>
+
+         <p>ルール：3人1組のチーム戦
+           <br>
+           　　　　札が読まれたらスタートラインから走って取りに行く
+           <br>
+           　　　　3枚先取で勝利のトーナメント戦
+          </p>
+
+          <p>越前市に住むたくさんの親子に参加していただき、チームごとに浴衣をリメイクしたオリジナルユニフォームを着て、元気に芝生を走り回ってかるたを取ってもらいました。
+           <br>
+            ハーフタイムには、ブラジルのスイーツ「ブリガデイロ」と福井のスイーツ「水ようかん」を楽しんでもらいました。
+          </p>
+
+
          <ul class="bxslider">
          <li><img src="images/１でっかいかるた.jpeg"></li>
          <li><img src="images/２でっかいかるた.jpeg"></li>
@@ -133,7 +146,7 @@ auto: true,
        </div>
 
        <div class="event">
-         <h3>・仁愛大学制作展2020</h3>
+         <h3>仁愛大学制作展2020</h3>
          <p>2020年1月に、仁愛大学吉村ゼミの卒業研究の成果を発表する場として制作展を開催。3年生のゼミ活動「でっかいかるたで大合戦！！」もこの制作展で発表しました。</p>
          <img src="images/制作展.jpg" ait="">
          <ul class="bxslider">
@@ -145,7 +158,7 @@ auto: true,
        </div>
 
        <div class="event">
-         <h3>・チャレンジ！！オープンガバナンス2019</h3>
+         <h3>チャレンジ！！オープンガバナンス2019</h3>
          <p>地域の問題を解決するアイデアコンテスト、チャレンジオープンガバナンス(COG)に、仁愛大学吉村ゼミは「でっかいかるたで大合戦！！」で応募をしました。</p>
          <img src="images/報告会.jpg" art="">
         </div>
