--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@ auto: true,
       <div class="content-body">
         <div class="event">
          <h3>でっかいかるたで大合戦！！</h3>
-         <p>2019年10月に、越前かるたを“でっかく”して野外で取り合うかるた大会を開催しました！　<a href="https://mt77j.github.io/karuta/index.html">大会のホームページはこちら</a></p>
+         <p>仁愛大学吉村ゼミの3年生7名は、越前かるたを“でっかく”して野外で取り合う「でっかいかるたで大合戦！！」というかるた大会を企画し、2019年10月22日、武生中央公園で開催しました！　<a href="https://mt77j.github.io/karuta/index.html">大会のホームページはこちら</a></p>
 
-         <p>ルール：3人1組のチーム戦
+         <p>　ルール：3人1組のチーム戦
            <br>
-           　　　　札が読まれたらスタートラインから走って取りに行く
+           　　　　　札が読まれたらスタートラインから走って取りに行く
            <br>
-           　　　　3枚先取で勝利のトーナメント戦
+           　　　　　3枚先取で勝利のトーナメント戦
           </p>
 
-          <p>越前市に住むたくさんの親子に参加していただき、チームごとに浴衣をリメイクしたオリジナルユニフォームを着て、元気に芝生を走り回ってかるたを取ってもらいました。
+          <p>越前市に住むたくさんの親子に参加していただき、参加者はチームごとに浴衣をリメイクしたオリジナルユニフォームを着て、元気に芝生を走り回ってかるたを取っていました。
            <br>
-            ハーフタイムには、ブラジルのスイーツ「ブリガデイロ」と福井のスイーツ「水ようかん」を楽しんでもらいました。
+            ハーフタイムには、ブラジルのスイーツ「ブリガデイロ」と、福井のスイーツ「水ようかん」を楽しんでもらいました。
           </p>
 
 
@@ -147,7 +147,9 @@ auto: true,
 
        <div class="event">
          <h3>仁愛大学制作展2020</h3>
-         <p>2020年1月に、仁愛大学吉村ゼミの卒業研究の成果を発表する場として制作展を開催。3年生のゼミ活動「でっかいかるたで大合戦！！」もこの制作展で発表しました。</p>
+         <p>2020年1月に、仁愛大学吉村ゼミの卒業研究の成果を発表する場として、ふるさとギャラリー叔羅で制作展を開催。3年生のゼミ活動である「でっかいかるたで大合戦！！」もこの制作展で発表しました。</p>
+         <p>新聞社に取材に来ていただいた他、大会の参加者も足を運んでいただき、大きなかるたを前に「これは僕が取った札だよ！」と楽しそうに話していました。
+         </p>
          <img src="images/制作展.jpg" ait="">
          <ul class="bxslider">
           <li><img src="images/制作展１.JPG"></li>
@@ -160,7 +162,18 @@ auto: true,
        <div class="event">
          <h3>チャレンジ！！オープンガバナンス2019</h3>
          <p>地域の問題を解決するアイデアコンテスト、チャレンジオープンガバナンス(COG)に、仁愛大学吉村ゼミは「でっかいかるたで大合戦！！」で応募をしました。</p>
+         <p>全国から56のアイデアが集まり、そのうち「でっかいかるた」はファイナリスト12組まで残ることができました！</p>
+
+         <div class="cog-items">
+           <img src="images/COG1.jpg" art="">
+          </div>
+          <div class="cog-items">
+           <img src="images/COG2.jpg" art="">
+         </div>
+
          <img src="images/報告会.jpg" art="">
+
+         <p><a href="http://park.itc.u-tokyo.ac.jp/padit/cog2019/final/27_Idea_COG2019_presentation.pdf#search='%E3%81%A7%E3%81%A3%E3%81%8B%E3%81%84%E3%81%8B%E3%82%8B%E3%81%9F%E3%81%A7%E5%A4%A7%E5%90%88%E6%88%A6'">COGでっかいかるたの資料はこちら</a></p>
         </div>
       </div>
 
