--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ auto: true,
 
      <div class="content-body">
        <h3>・地域を愛する　“ぎゅっ”</h3>
-       <p>地元の良いところを知れば、もっと地元が好きになる。地元を“ぎゅっ”と愛する心を育てるかるたです。</p>
+       <p>地元の良いところを知れば、もっと地元が好きになる。遊びながら「越前市にはこんなものがある！」を知ることで、地元を“ぎゅっ”と愛する心を育てるかるたです。</p>
 
          <h3>・人と人をつなぐ　“ぎゅっ“</h3>
         <p>かるたは、読まれた札の最初の言葉を聞き、その文字の札を取るというとてもシンプルで分かりやすいゲーム。だから大人も子供も海外の人も一緒に遊ぶことができます。かるたを通して交流する、人と人を“ぎゅっ”とつなぐかるたです。</p>
@@ -177,6 +177,13 @@ auto: true,
         </div>
       </div>
 
+    </div>
+
+    <div class="content-person">
+      <P><img src="images/ootaniyui.jpg"></P>
+      <p>大谷 結衣
+        <br>
+        仁愛大学　吉村ゼミ　4年</p>
     </div>
 
     <hr>
