プロフィール

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ auto: true,
        <div class="event">
          <h3>仁愛大学制作展2020</h3>
          <p>2020年1月に、仁愛大学吉村ゼミの卒業研究の成果を発表する場として、ふるさとギャラリー叔羅で制作展を開催。3年生のゼミ活動である「でっかいかるたで大合戦！！」もこの制作展で発表しました。</p>
-         <p>新聞社に取材に来ていただいた他、大会の参加者も足を運んでいただき、大きなかるたを前に「これは僕が取った札だよ！」と楽しそうに話していました。
+         <p>福井新聞などに取材に来ていただいた他、大会の参加者も足を運んでいただき、大きなかるたを前に「これは僕が取った札だよ！」と楽しそうに話していました。
          </p>
          <img src="images/制作展.jpg" ait="">
          <ul class="bxslider">
@@ -161,7 +161,7 @@ auto: true,
 
        <div class="event">
          <h3>チャレンジ！！オープンガバナンス2019</h3>
-         <p>地域の問題を解決するアイデアコンテスト、チャレンジオープンガバナンス(COG)に、仁愛大学吉村ゼミは「でっかいかるたで大合戦！！」で応募をしました。</p>
+         <p>東京大学等が主催し、LINEが後援する、地域課題解決のためのアイデアコンテスト「チャレンジ!!オープンガバナンス(COG)」に、仁愛大学吉村ゼミは「でっかいかるたで大合戦！！」で応募をしました。</p>
          <p>全国から56のアイデアが集まり、そのうち「でっかいかるた」はファイナリスト12組まで残ることができました！</p>
 
          <div class="cog-items">
@@ -179,12 +179,28 @@ auto: true,
 
     </div>
 
-    <div class="content-person">
+    <!-- <div class="content-person">
       <P><img src="images/ootaniyui.jpg"></P>
       <p>大谷 結衣
         <br>
         仁愛大学　吉村ゼミ　4年</p>
-    </div>
+    </div> -->
+
+    <section id="author_profile">
+      <p class="label">作/絵</p>
+      <div class="left"><img src="images/ootaniyui.jpg" alt="" /></div>
+      <div class="right">
+       <p class="author_name">大谷 結衣</p>
+       <p>所属　仁愛大学 コミュニケーション学科 吉村ゼミ<br>
+       出身　福井県越前市<br>
+       吉村ゼミにてデザイン・企画の経験を積み、現在は卒業制作として越前かるたのプロジェクトを進めている。</p>
+       <p>▶メッセージ◀<br>
+      『でっかいかるたで大合戦！！』のイベントから始まったこのプロジェクトは、地域貢献活動支援補助金など、市役所の方々のご協力もあって完成品の制作まで進めることができました。<br>
+      生まれも育ちも越前市である私は、かるた王国と言われる越前市でかるたを通して越前市の魅力を伝えたいと考え、カラフルながらも趣のある色を札1枚1枚に与えて遊んで楽しい見て楽しいかるたになるようにデザインしました。制作にあたって実際にその場所に行って取材することもあり、私自身魅力を再発見することができたと思います。<br>
+      </p>
+      </div>
+     </section>
+     
 
     <hr>
 
