想いセンタリング

--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@ auto: true,
 
      <div class="content-body">
        <h1>～地域を、人を、魅力を“ぎゅっ”と～</h1>
+       <div class="omoi">
        <p>人、食、観光、伝統工芸品。
          <br>
-        越前市には歴史ある素晴らしいものがたくさんあります。
+        越前市には歴史ある素晴らしいものがたくさん!
         <br>
-        知ってもらえば好きになる。
+        知れば知るほど好きになる。
         <br>
         そんな越前市を1つのかるたにまとめました。
         </p>
+      </div>
 
        <div class="button">
          <a href="menu.html" class="btn-flat-double-border">かるた一覧はこちら</a>
@@ -86,7 +88,7 @@ auto: true,
     <div class="setumei">
 
      <div class="content-header">
-       <h1>3つの“ぎゅっ”とは？</h1>
+       <h1>3つの“ぎゅっ”</h1>
      </div>
 
      <div>
@@ -139,7 +141,7 @@ auto: true,
          <li><img src="images/６でっかいかるた.jpeg"></li>
          <li><img src="images/７でっかいかるた.jpeg"></li>
          <li><img src="images/８でっかいかるた.jpeg"></li>
-         <li><img src="images/９でっかいかるた.JPG"></li>
+         <li><img src="images/９でっかいかるた.png"></li>
          <li><img src="images/１０でっかいかるた.jpeg"></li>
          </ul>
          <video src="video/でっかいかるた.mp4" controls></video>
