--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
   content="越前かるた,越前市,越前,かるた,でっかいかるた">
+  <mete name="description"
+  content="福井県越前市のオリジナルかるた「越前かるた(Echizen-karuta)」の一覧やこれまでのイベントを紹介しています。ダウンロードはサイト内のページをご活用ください。">
   <title>越前かるた</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
