リンク色変更

--- a/index.html
+++ b/index.html
@@ -121,13 +121,16 @@ auto: true,
       <div class="content-body">
         <div class="event">
          <h3>でっかいかるたで大合戦！！</h3>
-         <p>仁愛大学吉村ゼミの3年生7名は、越前かるたを“でっかく”して野外で取り合う「でっかいかるたで大合戦！！」というかるた大会を企画し、2019年10月22日、武生中央公園で開催しました！　<a href="https://mt77j.github.io/karuta/index.html">大会のホームページはこちら</a></p>
+         <p>仁愛大学吉村ゼミの3年生7名は、越前かるたを“でっかく”して野外で取り合う「でっかいかるたで大合戦！！」というかるた大会を企画し、2019年10月22日、武生中央公園で開催しました！
+         <div class="linkcolor"><p><a href="https://mt77j.github.io/karuta/index.html">大会のホームページはこちら</a></p></div>
 
-         <p>　ルール：3人1組のチーム戦
+         <p>ルール
            <br>
-           　　　　　札が読まれたらスタートラインから走って取りに行く
+           ・3人1組のチーム戦
            <br>
-           　　　　　3枚先取で勝利のトーナメント戦
+           ・札が読まれたらスタートラインから走って取りに行く
+           <br>
+           ・3枚先取で勝利のトーナメント戦
           </p>
 
           <p>越前市に住むたくさんの親子に参加していただき、参加者はチームごとに浴衣をリメイクしたオリジナルユニフォームを着て、元気に芝生を走り回ってかるたを取っていました。
@@ -179,7 +182,7 @@ auto: true,
 
          <img src="images/報告会.jpg" art="">
 
-         <p><a href="http://park.itc.u-tokyo.ac.jp/padit/cog2019/final/27_Idea_COG2019_presentation.pdf#search='%E3%81%A7%E3%81%A3%E3%81%8B%E3%81%84%E3%81%8B%E3%82%8B%E3%81%9F%E3%81%A7%E5%A4%A7%E5%90%88%E6%88%A6'">COGでっかいかるたの資料はこちら</a></p>
+         <div class="linkcolor"><p><a href="http://park.itc.u-tokyo.ac.jp/padit/cog2019/final/27_Idea_COG2019_presentation.pdf#search='%E3%81%A7%E3%81%A3%E3%81%8B%E3%81%84%E3%81%8B%E3%82%8B%E3%81%9F%E3%81%A7%E5%A4%A7%E5%90%88%E6%88%A6'">COGでっかいかるたの資料はこちら</a></p></div>
         </div>
       </div>
 
