参考サイト

--- a/index.html
+++ b/index.html
@@ -188,12 +188,6 @@ auto: true,
 
     </div>
 
-    <!-- <div class="content-person">
-      <P><img src="images/ootaniyui.jpg"></P>
-      <p>大谷 結衣
-        <br>
-        仁愛大学　吉村ゼミ　4年</p>
-    </div> -->
 
     <section id="author_profile">
       <p class="label">作/絵</p>
@@ -209,10 +203,16 @@ auto: true,
       かるたで遊んでみて、気になった札があれば裏面のQRコードを読み取り、たくさんの魅力に触れていただけると嬉しいです。
       </p>
       </div>
-     </section>
+    </section>
      
 
     <hr>
+
+    <div class="content-site">
+     <div class="linkcolor">
+      <p><a href="sankou.html">●参考・参照サイト一覧</a></p>
+     </div>
+   </div>
 
     <div class="content-footer">
       <div class="sns">
