--- a/sankou.html
+++ b/sankou.html
@@ -38,16 +38,12 @@
 
   <main>
     <div class="content-header">
-      <h1>ひみつの暗号</h1>
+      <h1>参考・参照リンク一覧</h1>
     </div>
 
     <div class="content-body">
      <div class="secretword">
-       <p>かたゆよに てきぬらねの すなふあわけ はいさみむこも <br>つしとちろ れるせんめく えやそおへ ほりひうま</p>
-     </div>
-
-     <div class="hint">
-       <p>ヒント：この順番に札を並べ替えてみよう！</p>
+       <p>準備中</p>
      </div>
 
     </div>
@@ -60,9 +56,9 @@
 
     <div class="content-footer">
       <div class="sns">
-        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/secret.html&text=越前かるたのひみつの暗号&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/sankou.html&text=越前かるたのWEBサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
-      <div class="button"><a href="menu.html">かるた一覧に戻る</a></div>
+      <div class="button"><a href="index.html">ホームに戻る</a></div>
     </div>
   </main>
 
