たけのっ子Twitter

--- a/page_yu.html
+++ b/page_yu.html
@@ -57,7 +57,13 @@
        <h2>ゆ　：　夢かがやいて　たけのっ子　大ホールで　公演だ</h2>
      </div>
 
+     <hr>
+
+     <a class="twitter-timeline" data-width="400" data-height="400" href="https://twitter.com/takenokko_g?ref_src=twsrc%5Etfw">Tweets by takenokko_g</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
     </div>
+
+    
 
     <hr>
 
