ごぼう講ビデオ

--- a/page_te.html
+++ b/page_te.html
@@ -57,6 +57,10 @@
        <h2>て　：　てんこ盛り！　ご飯とごぼうの　ごぼう講</h2>
      </div>
 
+     <hr>
+
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/j6GxErlin9k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </div>
 
     <hr>
