--- a/page_ra.html
+++ b/page_ra.html
@@ -59,6 +59,14 @@
 
     </div>
 
+    <div class="access">
+      <h1>アクセス</h1>
+
+     <div class="map">
+       <iframe src="https://www.google.com/maps/d/embed?mid=1CALXrHarOvkx1H3d3fQWiLOk188LwuDm" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+     </div>
+   </div>
+
     <hr>
 
     <div class="content-footer">
