ぎゅの写真

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ auto: true,
        <h1>3つの“ぎゅっ”</h1>
      </div>
 
-     <div>
+     <div class="gyu">
        <p><img src="images/三つのぎゅ.png" ait=""></p>
       </div>
 
