--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ auto: true,
 
 <body>
   <header class="site-header">
+
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
