--- a/secret.html
+++ b/secret.html
@@ -11,6 +11,11 @@
 
 <body>
   <header class="site-header">
+
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+    
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
