デザイン修正

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ auto: true,
     <div class="setumei">
 
      <div class="content-header">
-       <h1>越前かるたとは？</h1>
+       <h1>ー　越前かるたとは？　ー</h1>
      </div>
 
      <div class="content-body">
@@ -98,7 +98,7 @@ auto: true,
     <div class="setumei">
 
      <div class="content-header">
-       <h1>3つの“ぎゅっ”</h1>
+       <h1>ー　3つの“ぎゅっ”　ー</h1>
      </div>
 
      <div class="gyu">
@@ -121,14 +121,14 @@ auto: true,
     <div class="setumei">
 
      <div class="content-header">
-       <h1>これまでのイベント</h1>
+       <h1>ー　これまでのイベント　ー</h1>
      </div>
 
       <div class="content-body">
         <div class="event">
          <h3>でっかいかるたで大合戦！！</h3>
          <p>仁愛大学吉村ゼミの3年生7名は、越前かるたを“でっかく”して野外で取り合う「でっかいかるたで大合戦！！」というかるた大会を企画し、2019年10月22日、武生中央公園で開催しました！
-         <div class="linkcolor"><p><a href="https://mt77j.github.io/karuta/index.html">大会のホームページはこちら</a></p></div>
+         <div class="linkcolor"><p><a href="https://mt77j.github.io/karuta/index.html">▶大会のホームページはこちら</a></p></div>
 
          <p>ルール
            <br>
@@ -188,7 +188,7 @@ auto: true,
 
          <img src="images/報告会.jpg" art="">
 
-         <div class="linkcolor"><p><a href="http://park.itc.u-tokyo.ac.jp/padit/cog2019/final/27_Idea_COG2019_presentation.pdf#search='%E3%81%A7%E3%81%A3%E3%81%8B%E3%81%84%E3%81%8B%E3%82%8B%E3%81%9F%E3%81%A7%E5%A4%A7%E5%90%88%E6%88%A6'">COGでっかいかるたの資料はこちら</a></p></div>
+         <div class="linkcolor"><p><a href="http://park.itc.u-tokyo.ac.jp/padit/cog2019/final/27_Idea_COG2019_presentation.pdf#search='%E3%81%A7%E3%81%A3%E3%81%8B%E3%81%84%E3%81%8B%E3%82%8B%E3%81%9F%E3%81%A7%E5%A4%A7%E5%90%88%E6%88%A6'">▶COGでっかいかるたの資料はこちら</a></p></div>
         </div>
       </div>
 
