--- a/sankou.html
+++ b/sankou.html
@@ -43,7 +43,7 @@
 
   <main>
     <div class="content-header">
-      <h1>参考・参照リンク一覧</h1>
+      <h1>ー　参考・参照リンク一覧　ー</h1>
     </div>
 
     <div class="content-body">
