--- a/secret.html
+++ b/secret.html
@@ -15,7 +15,7 @@
     <div class="icon">
       <p><img src="images/アイコン.jpg"></p>
     </div>
-    
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -43,7 +43,7 @@
 
   <main>
     <div class="content-header">
-      <h1>ひみつの暗号</h1>
+      <h1>ー　ひみつの暗号　ー</h1>
     </div>
 
     <div class="content-body">
