--- a/download.html
+++ b/download.html
@@ -15,7 +15,7 @@
     <div class="icon">
       <p><img src="images/アイコン.jpg"></p>
     </div>
-    
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -44,7 +44,7 @@
 
   <main>
     <div class="content-header">
-      <h1>ダウンロード</h1>
+      <h1>ー　ダウンロード　ー</h1>
     </div>
 
     <div class="content-body">
