--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     <div class="icon">
       <p><img src="images/アイコン.jpg"></p>
     </div>
-    
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -43,7 +43,7 @@
 
   <main>
     <div class="content-header">
-      <h1>かるた一覧</h1>
+      <h1>ー　かるた一覧　ー</h1>
     </div>
 
    <div class="items">
