--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
 
   <main>
     <div class="content-header">
-      <h1>ー　かるた一覧　ー</h1>
+      <h1>かるた一覧</h1>
     </div>
 
    <div class="items">
