--- a/secret.html
+++ b/secret.html
@@ -43,7 +43,7 @@
 
   <main>
     <div class="content-header">
-      <h1>ー　ひみつの暗号　ー</h1>
+      <h1>ひみつの暗号</h1>
     </div>
 
     <div class="content-body">
