--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ auto: true,
     <div class="setumei">
 
      <div class="content-header">
-       <h1>ー　越前かるたとは？　ー</h1>
+       <h1>越前かるたとは？</h1>
      </div>
 
      <div class="content-body">
@@ -98,7 +98,7 @@ auto: true,
     <div class="setumei">
 
      <div class="content-header">
-       <h1>ー　3つの“ぎゅっ”　ー</h1>
+       <h1>3つの“ぎゅっ”</h1>
      </div>
 
      <div class="gyu">
@@ -121,7 +121,7 @@ auto: true,
     <div class="setumei">
 
      <div class="content-header">
-       <h1>ー　これまでのイベント　ー</h1>
+       <h1>これまでのイベント</h1>
      </div>
 
       <div class="content-body">
