デザイン修正

--- a/download.html
+++ b/download.html
@@ -44,7 +44,7 @@
 
   <main>
     <div class="content-header">
-      <h1>ダウンロード</h1>
+      <h1>--　ダウンロード　--</h1>
     </div>
 
     <div class="content-body">
