--- a/page_yo.html
+++ b/page_yo.html
@@ -63,7 +63,8 @@
       <h1>アクセス</h1>
 
      <div class="map">
-       <iframe src="https://www.google.com/maps/d/edit?mid=1K1Z9ERZLFlxAIqHGtdnLWU6A0pDx6Okk&usp=sharing" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+       <iframe src="https://www.google.com/maps/d/embed?mid=1K1Z9ERZLFlxAIqHGtdnLWU6A0pDx6Okk" 
+        width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
      </div>
    </div>
     
