デザイン変更

--- a/secret.html
+++ b/secret.html
@@ -48,7 +48,7 @@
 
     <div class="content-body">
      <div class="secretword">
-       <p>かたゆよに てきぬらねの すなふあわけ はいさみむこも <br>つしとちろ れるせんめく えやそおへ ほりひうま</p>
+       <p>かたゆよに<br>てきぬらね<br>のすなふあ <br>わけはいさ<br>みむこもつ<br>しとちろれ<br>るせんめく<br>えやそおへ<br>ほりひうま</p>
      </div>
 
      <div class="hint">
@@ -60,14 +60,12 @@
   </main>
 
 
-
- <hr>
-
     <div class="content-footer">
+      <div class="button"><a href="menu.html">かるた一覧に戻る</a></div>
+
       <div class="sns">
         <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/secret.html&text=越前かるたのひみつの暗号&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
-      <div class="button"><a href="menu.html">かるた一覧に戻る</a></div>
     </div>
   </main>
 
