--- a/sankou.html
+++ b/sankou.html
@@ -57,13 +57,12 @@
 
 
 
- <hr>
-
     <div class="content-footer">
-      <div class="sns">
-        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/sankou.html&text=越前かるたのWEBサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
-      </div>
       <div class="button"><a href="index.html">ホームに戻る</a></div>
+
+      <!-- <div class="sns">
+        <a href="http://twitter.com/share?url=https://jin-link8.github.io/echizenkaruta/sankou.html&text=越前かるたのWEBサイト&hashtags=越前かるた" target="_blank"><i class="fab fa-twitter"></i></a>
+      </div> -->
     </div>
   </main>
 
