--- a/page_ra.html
+++ b/page_ra.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>中華そば</title>
+  <title>越前かるた-中華そば</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
@@ -11,6 +11,11 @@
 
 <body>
   <header class="site-header">
+
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +62,117 @@
        <h2>ら　：　らーめんじゃないよ　中華そば</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+       <p>駅前周辺にお店が多い、昔ながらの素朴なメニュー</p>
+     </div>
+
+     <div class="page-setumei">
+       <p>透き通ったスープに、ハムやかまぼこ、青ネギなどがのった昔ながらのTHE中華そば！
+        <br>
+        戦争後の即席ラーメンブームで「ラーメン」という呼び名が広まっていく中、越前市(特に武生市の駅前周辺)では「中華そば」という伝統の名前が使われて続けていました。それが今日まで続いたので、武生駅前では今でも「中華そば」という名前を使うそうです。
+        <br>「武生駅前中華そば」と呼ぶこともあるそうですよ♪
+       </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>特徴は？</p>
+     </div>
+     <div class="hitokoto">
+       <p>薄味で安い！地元のファンが多いです</p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>おすすめのお店①</p>
+     </div>
+     <div class="hitokoto">
+       <p>若竹食堂</p>
+     </div>
+
+     <div class="omise">
+       <img src="pageimages/若竹食堂.png" alt=""/>
+       <img src="pageimages/若竹食堂中華そば.png" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+       <p>
+        住所　　▶　越前市深草2丁目2-11<br>
+        営業時間▶　11：00～15：00<br>
+        定休日　▶　木曜日<br>
+        電話　　▶　0778-22-2543<br>
+        価格　　▶　中華そば　650円<br>
+        シンプルなTHE中華そば。ハムがたくさんでうれしい！
+       </p>
+     </div>
+
+     <div class="balloon2-right">
+      <p>おすすめのお店②</p>
+     </div>
+     <div class="hitokoto">
+      <p>たかせや</p>
+     </div>
+
+     <div class="omise">
+      <img src="pageimages/たかせや.png" alt=""/>
+      <img src="pageimages/たかせや中華そば.png" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+      <p>
+       住所　　▶　越前市府中一丁目8-14<br>
+       営業時間▶　11：00～19：30<br>
+       定休日　▶　木曜日<br>
+       電話　　▶　0778-22-0799<br>
+       価格　　▶　中華そば　610円<br>
+       太麺が美味しく、胡椒のきいたスープは大人の味
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+      <p>おすすめのお店➂</p>
+     </div>
+     <div class="hitokoto">
+      <p>吉田食堂</p>
+     </div>
+
+     <div class="omise">
+      <img src="pageimages/吉田食堂.png" alt=""/>
+      <img src="pageimages/吉田食堂中華そば.png" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+      <p>
+       住所　　▶　越前市若竹町11-24 <br>
+       営業時間▶　11：00～15：00<br>
+       定休日　▶　日曜日<br>
+       電話　　▶　0778-22-2052<br>
+       価格　　▶　中華そば　550円<br>
+       コスパ満点！大盛りでもぺろりといけます！<br>
+       食後のソフトクリームは10段⁉
+      </p>
+     </div>
+
+
     </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+     <div class="balloon5">
+     <div class="faceicon">
+      <img src="images/ootaniyui.jpg" alt="" />
+     </div>
+     <div class="chatting">
+      <div class="says">
+       <p>こってりラーメンもおいしいですが、薄味でリーズナブルな中華そばはやっぱり忘れられない地元の味。私もどちらかというと薄味を好むので中華そば大好きです！紹介したほかにも中華そばはおいしいお店が多いので、駅前散策にオススメです！</p>
+      </div>
+     </div>
+     </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
