よ　ボルガライス

--- a/page_yo.html
+++ b/page_yo.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ボルガライス</title>
+  <title>越前かるた-ボルガライス</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/yo.css">
 </head>
 
 <body>
   <header class="site-header">
+
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -54,10 +60,142 @@
      </div>
 
      <div class="yomihuda">
-       <h2>あ　：　洋食の最強コラボ　謎のB級グルメ　ボルガライス</h2>
+       <h2>よ　：　洋食の最強コラボ　謎のB級グルメ　ボルガライス</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+       <p>オムライスにトンカツをのせ、こだわりソースをかけた武生のソウルフード</p>
+     </div>
+
+     <div class="page-setumei">
+       <p>30年前に誕生した、ボリューム満点で、大人から子供まで大人気なボルガライス！
+       <br>
+       基本的にはオムライス＋トンカツ＋ソースですが、お店によってオムライスの中のご飯や、かけるソースの味が少しずつ違うので、食べ比べてみることもおすすめです。
+       </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>「謎の」とは？</p>
+     </div>
+     <div class="hitokoto">
+       <p>名前の由来が分かっていない！</p>
+     </div>
+     <div class="page-setumei">
+       <p>
+        東京の洋食屋さんが出していた「ボストンライス」が原型になっている説や、お店のスタッフがたまたま作った料理が評判になった説など、名前の由来や発祥はいろいろな説がありますが、どれもはっきりとわかっていない、謎に包まれた料理です。
+       </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>協会がある？</p>
+     </div>
+     <div class="hitokoto">
+       <p>日本ボルガラー協会</p>
+     </div>
+      <div class="page-setumei">
+       <p>
+        ボルガライスが大好きな越前市の職員たちで結成された団体。地元で古くから愛されているボルガライスを盛り上げ、地元民も含めて多くの人たちに良さを知ってもらいたいと、2010年に設立されました。<br>
+        ▼日本ボルガラー協会公式Twitter
+       </p>
+      </div>
+     <div class="twitter-link">
+       <a class="twitter-timeline" data-width="400" data-height="400"  href="https://twitter.com/volgaer?ref_src=twsrc%5Etfw">Tweets by volgaer</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+     </div>
+
+     <div class="balloon2-right">
+       <p>おすすめのお店①</p>
+     </div>
+     <div class="hitokoto">
+       <p>カフェド伊万里</p>
+     </div>
+
+     <div class="omise">
+       <img src="pageimages/伊万里.png" alt=""/>
+       <img src="pageimages/伊万里ボルガ.png" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+      <p>
+       住所　　▶　越前市新保二丁目２ <br>
+       営業時間▶　8：00～18：00<br>
+       定休日　▶　水曜日、1月1日<br>
+       電話　　▶　0778-23-4845<br>
+       価格　　▶　ボルガライス　900円<br>
+       野菜がたっぷり入ったオムライスに揚げたてのとんかつがサクサク！自家製デミグラスソースをかけて
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>おすすめのお店②</p>
+     </div>
+     <div class="hitokoto">
+       <p>ヨコガワ分店</p>
+     </div>
+
+     <div class="omise">
+      <img src="pageimages/ヨコガワ.png" alt=""/>
+      <img src="pageimages/ヨコガワボルガ.png" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+     <p>
+      住所　　▶　越前市京町1-4-35<br>
+      営業時間▶　11：30～23：00<br>
+      定休日　▶　火曜日<br>
+      電話　　▶　0778-22-7172<br>
+      価格　　▶　ボルガライス　980円<br>
+      トマトが効いた少し酸味のある特製ソースがライスと薄焼き卵ととんかつにマッチ！
+     </p>
+     </div>
+
+     <div class="balloon2-right">
+      <p>おすすめのお店➂</p>
+     </div>
+     <div class="hitokoto">
+      <p>越前めん処　江戸屋</p>
+     </div>
+
+     <div class="omise">
+      <img src="pageimages/江戸屋.png" alt=""/>
+      <img src="pageimages/江戸屋ボルガ.png" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+      <p>
+      住所　　▶　越前市高瀬2-6-15 <br>
+      営業時間▶　11：00～19：00<br>
+      定休日　▶　月、第三日曜<br>
+      電話　　▶　0778-24-3248<br>
+      価格　　▶　和風ボルガライス並　900円<br>
+      (ミニ、並、大盛、特盛、デカ盛り、メガ盛り)<br>
+      うどん屋さんの和風だしが効いた卵は出し巻き卵のようで、油で炒めていないご飯はあっさりしていてまさに和風！デカ盛りが売りなので食べすぎ注意！
+      </p>
+     </div>
+
+
+
+
     </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>武生のソウルフードでありながら名前の由来が分かっていないという不思議さがいいですよね！学校の給食、学食にも登場するメニューだそうです。越前かるたの中では特に気に入っている絵札です。</p>
+     </div>
+    </div>
+    </div>
+  </div>
+  <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
