--- a/page_yu.html
+++ b/page_yu.html
@@ -59,7 +59,9 @@
 
      <hr>
 
-     <a class="twitter-timeline" data-width="400" data-height="400" href="https://twitter.com/takenokko_g?ref_src=twsrc%5Etfw">Tweets by takenokko_g</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+     <div class="twitter-link">
+       <a class="twitter-timeline" data-width="400" data-height="400" href="https://twitter.com/takenokko_g?ref_src=twsrc%5Etfw">Tweets by takenokko_g</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+     </div>
 
     </div>
 
