つ　越前そば

--- a/page_tu.html
+++ b/page_tu.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>越前そば</title>
+  <title>越前かるた-越前そば</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/tu.css">
 </head>
 
 <body>
   <header class="site-header">
+
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
+
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +63,150 @@
        <h2>つ　：　冷たいおろしがさっぱり　越前発祥　これぞ「そば」</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>他とはコシと風味が違う！おいしいお水で作る福井名物</p>
+     </div>
+
+     <div class="page-setumei">
+      <p>福井の名物といったら越前そばですよね！
+       <br>
+       冷たいそばに、たっぷりの大根おろしとかつお節、刻みネギを乗せて食べるおろしそばが有名です。
+       <br>
+       お店によってさまざまなこだわりがあるので、ぜひ食べ比べしてみて下さい！
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>始まりは？</p>
+     </div>
+     <div class="hitokoto">
+       <p>戦や災害に備える食べものとして</p>
+     </div>
+     <div class="page-setumei">
+      <p>1610年に府中(今の越前市)の領主としてやってきた本田富正(とみまさ)が、京都・伏見からそば職人の金子左衛門を連れてきたことが始まりです。
+       <br>
+       城下の人々に戦や災害に備える食べものとしてそばの栽培をするように勧め、さらに健康面でプラスとなるように大根おろしと一緒に食べるそばを考えだしました。
+       <br>それが「越前おろしそば」になったというわけです！
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>もっと知るには？</p>
+     </div>
+     <div class="hitokoto">
+     <p>越前そばの里</p>
+     </div>
+     <div class="sobasato">
+       <img src="pageimages/越前そばの里.png" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+     <p>越前そばのアミューズメントパーク！
+      <br>
+      そば打ち体験をはじめとした各種体験や工場見学。もちろんそばを買うことも食べることもできます。
+     </p>
+     </div>
+
+     <div class="official-site">
+       <a href="https://www.echizensoba.co.jp/" class="btn btn--red btn--radius btn--cubic">越前そばの里　公式サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+     </div>
+
+     <div class="balloon2-right">
+       <p>おすすめのお店①</p>
+     </div>
+     <div class="hitokoto">
+       <p>越前そばの里　そば処越前屋</p>
+     </div>
+
+     <div class="omise">
+       <img src="pageimages/" alt=""/>
+       <img src="pageimages/越前屋そば.jpg" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+      <p>
+       住所　　▶　越前市真柄町7-37<br>
+       営業時間▶　10：30～15：00<br>
+       定休日　▶　年中無休(1月1～3日は除く)<br>
+       電話　　▶　0778-21-0272<br>
+       価格　　▶　おろしそば　590円<br>
+       栽培、製粉までこだわりのそば！落ち着いた空間でそばを楽しめる！
+      </p>
+     </div>
+
+     <div class="balloon2-right">
+       <p>おすすめのお店②</p>
+     </div>
+     <div class="hitokoto">
+       <p>御清水庵(おしょうずあん)</p>
+     </div>
+
+     <div class="omise">
+      <img src="pageimages/御清水庵.jpg" alt=""/>
+      <img src="pageimages/御清水庵そば.jpg" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+     <p>
+      住所　　▶　越前市吾妻町3-33 <br>
+      営業時間▶　11：00～18：00<br>
+      定休日　▶　月曜日<br>
+      電話　　▶　0778-21-5088<br>
+      価格　　▶　おろしそば　700円<br>
+      すぐ隣にある「御清水不動尊の水」(ふくいのおいしい水認定)を使った手打ちそば！生そばのお持ち帰りもできます。
+     </p>
+     </div>
+     <div class="official-site">
+      <a href="https://www.oshow-zan.com/" class="btn btn--red btn--radius btn--cubic">御清水庵　公式サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
     </div>
+
+     <div class="balloon2-right">
+       <p>おすすめのお店➂</p>
+     </div>
+     <div class="hitokoto">
+       <p>越前そばと珈琲　HAMA庵</p>
+     </div>
+
+     <div class="omise">
+      <img src="pageimages/HAMA庵.jpg" alt=""/>
+      <img src="pageimages/HAMA庵そば.jpg" alt=""/>
+     </div>
+
+     <div class="page-setumei">
+     <p>
+      住所　　▶　越前市村国2丁目5-52 <br>
+      営業時間▶　11：00～17：00<br>
+      定休日　▶　火曜日<br>
+      電話　　▶　0778-42-8026<br>
+      価格　　▶　越前おろしそば　700円<br>
+      独自ブレンドのこだわりの十割そばは、コシがありなめらかでいい香り！食後にはスイーツも楽しめます。
+     </p>
+     </div>
+     <div class="official-site">
+      <a href="https://hama-an.jimdofree.com/" class="btn btn--red btn--radius btn--cubic">HAMA庵　公式サイトはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+
+    </div>
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>冷たい蕎麦もあったかい蕎麦も好きですが、やっぱり県外に行って蕎麦を食べても「なんか違うなあ、これは蕎麦じゃない！」と思ってしまいます。(県民あるあるでしょうか…)私の最近のお気に入りのお店は、武生高校横の「HAMA庵」です！割と最近出たばかりのお店ですが、季節ごとに違った味の楽しめる蕎麦が絶品です。ぜひ食べに行ってみて下さい！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
 
     <div class="access">
       <h1>アクセス</h1>
