--- a/page_tu.html
+++ b/page_tu.html
@@ -71,6 +71,9 @@
      <div class="hitokoto">
       <p>他とはコシと風味が違う！おいしいお水で作る福井名物</p>
      </div>
+     <div class="sobasato">
+       <img src="pageimages/越前そば.png">
+     </div>
 
      <div class="page-setumei">
       <p>福井の名物といったら越前そばですよね！
@@ -201,7 +204,8 @@
     </div>
     <div class="chatting">
      <div class="says">
-      <p>冷たい蕎麦もあったかい蕎麦も好きですが、やっぱり県外に行って蕎麦を食べても「なんか違うなあ、これは蕎麦じゃない！」と思ってしまいます。(県民あるあるでしょうか…)私の最近のお気に入りのお店は、武生高校横の「HAMA庵」です！割と最近出たばかりのお店ですが、季節ごとに違った味の楽しめる蕎麦が絶品です。ぜひ食べに行ってみて下さい！</p>
+      <p>冷たいそばもあったかいそばも好きですが、やっぱり県外に行ってそばを食べても「なんか違うなあ、これはそばじゃない！」と思ってしまいます。(県民あるあるでしょうか…)
+        <br>私の最近のお気に入りのお店は、武生高校横の「HAMA庵」です！割と最近出たばかりのお店ですが、季節ごとに違った味が楽しめます。ぜひ食べに行ってみて下さい！</p>
      </div>
     </div>
     </div>
