ゆ　たけのっ子

--- a/page_tu.html
+++ b/page_tu.html
@@ -71,7 +71,7 @@
      <div class="hitokoto">
       <p>他とはコシと風味が違う！おいしいお水で作る福井名物</p>
      </div>
-     <div class="sobasato">
+     <div class="shasin">
        <img src="pageimages/越前そば.png">
      </div>
 
@@ -104,7 +104,7 @@
      <div class="hitokoto">
      <p>越前そばの里</p>
      </div>
-     <div class="sobasato">
+     <div class="shasin">
        <img src="pageimages/越前そばの里.png" alt=""/>
      </div>
 
