--- a/page_yo.html
+++ b/page_yo.html
@@ -99,7 +99,9 @@
      </div>
       <div class="page-setumei">
        <p>
-        ボルガライスが大好きな越前市の職員たちで結成された団体。地元で古くから愛されているボルガライスを盛り上げ、地元民も含めて多くの人たちに良さを知ってもらいたいと、2010年に設立されました。<br>
+        ボルガライスが大好きな越前市の職員たちで結成された団体。地元で古くから愛されているボルガライスを盛り上げ、地元民も含めて多くの人たちに良さを知ってもらいたいと、2010年に設立されました。
+        <br>
+        <br>
         ▼日本ボルガラー協会公式Twitter
        </p>
       </div>
